--- a/home.html
+++ b/home.html
@@ -38,6 +38,7 @@
          <p> The object would look <span id = "l_l">1</span> times it's original size!</p>
          <canvas id="rectContainer" width="520" height="70"></canvas>
          <script src="length.js"></script>
+         <p> Test test test...</p>
       </div>
     </div>
   </body>
