--- a/home.html
+++ b/home.html
@@ -39,6 +39,7 @@
          <canvas id="rectContainer" width="520" height="70"></canvas>
          <script src="length.js"></script>
          <p> Test test test...</p>
+         <p> Test form my other source!</p>
       </div>
     </div>
   </body>
