Black background, and ligth text color

--- a/home.html
+++ b/home.html
@@ -5,14 +5,14 @@
     <meta charset="utf-8">
     <title>Physics Webapp</title>
   </head>
-  <body class="dik">
+  <body>
 
       <div>
         <h1 class="ctr">Welcome!</h1>
       </div>
 
 
-    <div>
+    <div id = "Time_div">
       <h2 class="ctr">Time dilation:</h2>
       <p class="ctr">
         Please adjust your velocity compared to the speed of light:
@@ -24,8 +24,9 @@
          <p> Time would feel <span id = "t_t">1</span> times slower, than for someone standing still!</p>
          <script src="time.js"></script>
       </div>
+    </div>
 
-
+    <div id = "Length_div">
       <h2 class="ctr">Length contraction:</h2>
       <p class="ctr">
         Please adjust the object's velocity compared to the speed of light:
@@ -38,9 +39,9 @@
          <p> The object would look <span id = "l_l">1</span> times it's original size!</p>
          <canvas id="rectContainer" width="520" height="70"></canvas>
          <script src="length.js"></script>
-         <p> Test test test...</p>
-         <p> Test form my other source!</p>
+         <h4>Szia Brigi!</h4>
       </div>
     </div>
+
   </body>
 </html>
