--- a/home.html
+++ b/home.html
@@ -40,6 +40,7 @@
          <canvas id="rectContainer" width="520" height="70"></canvas>
          <script src="length.js"></script>
       </div>
+      <a href="test.html">TEST PAGE</a>
     </div>
 
   </body>
